[package]
name = "tap"
version = "0.1.0"
authors = ["Solal Jacob"]
edition = "2021"

description = "Trustable Artifact Parser"
readme      = "README.md"

[dependencies]
anyhow = { version = "1.0.40"}
thiserror = "1.0.24"
serde = { version = "1.0", features = ["derive", "std", "alloc", "rc"] }
serde_json = "1.0"
rand = { version = "0.5", features = ["std"] } #ownned-singleton depend on rand 0.5, and lalrpop on rand 0.6  we must force std or query will not build
owned-singleton = "0.1.0"
crossbeam = "0.7"
crossbeam-deque = "0.7" 
num_cpus = "1.10.1"
intervaltree = "0.2.4"
indextree = { version = "4.4.0", features = ["deser"] }
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4", features = ["std", "serde"] }
paste = "0.1"
schemars = "0.8"
typetag = "0.1.2"
byteorder = "1.4.3"
lru = "0.7.0"
